# LMDepot

./: AGENTS.md  README.md  index.html  package-lock.json  package.json
src/: App.css  App.tsx  jobProgress.ts  modelJobs.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  lib.rs  main.rs  types.rs
src-tauri/src/adapters/: directory_models.rs  huggingface_cache.rs  jan.rs  lmstudio.rs  mod.rs  ollama.rs  omlx.rs
src-tauri/src/core/: backup_import.rs  copy_engine.rs  drive_monitor.rs  mod.rs  process_check.rs  scanner.rs
src-tauri/src/core/operations/: backup.rs  batch.rs  delete.rs  mod.rs  offload.rs  restore.rs  sync.rs
src-tauri/src/db/: mod.rs  schema.sql
src-tauri/tests/: integration_test.rs
src/api/: client.ts
src/components/: ActionButtonWithHint.tsx  Badges.tsx
src/pages/: Dashboard.tsx  Drives.tsx  Jobs.tsx  ModelDetail.tsx  Models.tsx  Settings.tsx
